WebKit fails IETC composition event types https://bugs.webkit.org/show_bug.cgi?id=76690

Canonical link: https://commits.webkit.org/93639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105605 268f45cc-cd09-0410-ab3c-d52691b4dbfc